--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-ts-lib-starter",
-  "version": "0.0.0",
+  "name": "pathql",
+  "version": "0.0.1",
   "main": "./dist/my-lib.umd.js",
   "module": "./dist/my-lib.es.js",
   "exports": {
@@ -18,11 +18,18 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "watch": "concurrently \"tsc --watch\" \"vite build --watch\"",
+    "test": "tsx tests",
     "prepare": "npm run build"
   },
   "devDependencies": {
+    "@types/node": "^20.4.5",
     "concurrently": "^7.6.0",
+    "tsx": "^3.12.7",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
+  },
+  "dependencies": {
+    "@masala/parser": "^1.0.0",
+    "picocolors": "^1.0.0"
   }
 }
