--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "module": "./dist/my-lib.es.js",
   "exports": {
     ".": {
+      "types": "./types/main.d.ts",
       "import": "./dist/my-lib.es.js",
       "require": "./dist/my-lib.umd.js"
     }
